# Student-Teacher-Management-System

./: MachineTest-Navalt.postman_api_collection  README.md  pyproject.toml
NavaltMachineTest/: common_functions.py  db_connection.py  main.py  student_functions.py  teacher_functions.py  utils.py
